[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/Editor.gd" type="Script" id=1]

[node name="Editor" type="PopupPanel"]
margin_top = 24.0
margin_right = 314.0
margin_bottom = 176.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 310.0
margin_bottom = 148.0

[node name="Step" type="Button" parent="VBoxContainer"]
margin_right = 306.0
margin_bottom = 20.0
text = "Step"

[node name="Reset" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 306.0
margin_bottom = 44.0
text = "Reset"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 306.0
margin_bottom = 144.0
rect_min_size = Vector2( 306, 96 )
highlight_current_line = true

[connection signal="button_up" from="VBoxContainer/Step" to="." method="_on_Step_button_up"]
[connection signal="button_up" from="VBoxContainer/Reset" to="." method="_on_Reset_button_up"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
